2009-04-27  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Maciej Stachowiak.

        Tweak a loop condition to keep GCC happy,
        some GCCs seem to be having issues with this. :-/

        * bytecompiler/BytecodeGenerator.cpp:
        (JSC::BytecodeGenerator::breakTarget):
        * wtf/Platform.h:

2009-04-27  Adam Roben  <aroben@apple.com>

        Windows Debug build fix

        Not sure why the buildbots weren't affected by this problem.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Let VS
        re-order the file list, and added JavaScriptCore[_debug].def to the
        project. This was not necessary for the fix, but made making the fix
        easier.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore_debug.def:
        Removed a function that no longer exists.

2009-04-26  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Weinig Sam.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=25416
        "Cached prototype accesses unsafely hoist property storage load above structure checks."
        
        Do not hoist the load of the pointer to the property storage array.

        No performance impact.

        * jit/JITPropertyAccess.cpp:
        (JSC::JIT::privateCompileGetByIdProto):
        (JSC::JIT::privateCompileGetByIdProtoList):

2009-04-26  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Geoffrey "Gaffe or energy?" Garen.

        Randomize address requested by ExecutableAllocatorFixedVMPool.

        * jit/ExecutableAllocatorFixedVMPool.cpp:
        (JSC::FixedVMPoolAllocator::FixedVMPoolAllocator):

2009-04-26  Sam Weinig  <sam@webkit.org>

        Reviewed by Eric Seidel.

        Remove scons-based build system.

        * JavaScriptCore.scons: Removed.

2009-04-25  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (Buildfix).

        Make HAVE_MADV_FREE darwin only for now

        * wtf/Platform.h:
